<resources>
    <string name="app_name" translatable="false">Smart AutoClicker</string>
    <string name="notification_channel_name" translatable="false">Smart AutoClicker</string>
    <string name="notification_title">Scenario: %1$s</string>
    <string name="notification_message">Press to change the scenario</string>
    <string name="activity_title">Scenarios</string>
    <string name="accessibility_service_description">This application needs this service to inject the clicks you have
        created into the other applications once the conditions have been detected.\n\nNo data will be collected from
        this application. Feel free to visit our github, the code is open source !</string>
    <string name="dialog_title_add_scenario">New scenario</string>
    <string name="dialog_title_create_backup">Create backup</string>
    <string name="dialog_title_delete_scenario">Delete scenario</string>
    <string name="dialog_title_import_backup">Import backup</string>
    <string name="dialog_title_permissions">Permissions required</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_overlay_title_action_type">Action type</string>
    <string name="dialog_overlay_title_application_selection">Select an application</string>
    <string name="dialog_overlay_title_click">Click</string>
    <string name="dialog_overlay_title_condition_config">Condition</string>
    <string name="dialog_overlay_title_copy_from">Copy from</string>
    <string name="dialog_overlay_title_debug_report">Debug report</string>
    <string name="dialog_overlay_title_end_condition_config">End Condition</string>
    <string name="dialog_overlay_title_event_config">Event</string>
    <string name="dialog_overlay_title_event_selection">Select an event</string>
    <string name="dialog_overlay_title_intent">Intent</string>
    <string name="dialog_overlay_title_pause">Wait</string>
    <string name="dialog_overlay_title_scenario_config">Scenario</string>
    <string name="dialog_overlay_title_swipe">Swipe</string>
    <string name="dialog_overlay_title_toggle_event">Event state</string>
    <string name="menu_item_title_advanced">Advanced</string>
    <string name="menu_item_title_cancel">Cancel</string>
    <string name="menu_item_title_export">Export</string>
    <string name="menu_item_title_import">Import</string>
    <string name="menu_item_title_search">Search</string>
    <string name="menu_item_title_select_all">Select all</string>
    <string name="menu_item_title_simple">Simple</string>
    <string name="menu_item_title_events">Events</string>
    <string name="menu_item_title_config">Config</string>
    <string name="menu_item_title_debug">Debug</string>
    <string name="menu_item_title_conditions">Conditions</string>
    <string name="menu_item_title_actions">Actions</string>
    <string name="item_desc_click">Click somewhere on the screen</string>
    <string name="item_desc_click_details">During %1$s at [%2$d, %3$d]</string>
    <string name="item_desc_click_position_on_condition">On condition</string>
    <string name="item_desc_click_on_position">Click on %1$d, %2$d</string>
    <string name="item_desc_intent">Interact with another application</string>
    <string name="item_desc_intent_action">Send %1$s</string>
    <string name="item_desc_intent_action_component">Send %1$s to %2$s</string>
    <string name="item_desc_pause">Pause the detection execution</string>
    <string name="item_desc_pause_details">During %1$s</string>
    <string name="item_desc_permissions">The following permissions are required to use Smart AutoClicker:</string>
    <string name="item_desc_permission_overlay">The overlay permission allows this application to display a menu
                                                  over other apps.</string>
    <string name="item_desc_permission_accessibility">The accessibility service allows this application to click on
                                                        other apps for you.</string>
    <string name="item_desc_permission_notification">Optional: Shows the notification while the application is running.</string>
    <string name="item_desc_swipe">Swipe from a position on the screen to another</string>
    <string name="item_desc_swipe_details">During %1$s from [%2$d, %3$d] to [%4$d, %5$d]</string>
    <string name="item_desc_swipe_positions">Swipe from %1$d, %2$d to %3$d, %4$d</string>
    <string name="item_desc_toggle_event">Change the enabled state of an event</string>
    <string name="item_desc_toggle_event_details">Change event state with type %1$s</string>
    <string name="item_error_action_invalid_generic">This action is invalid</string>
    <string name="item_error_action_invalid_toggle_event_target">Target event not found</string>
    <string name="item_title_backup_create_select_file">Select output file</string>
    <string name="item_title_backup_import_select_file">Select backup file</string>
    <string name="item_title_click">Click</string>
    <string name="item_title_debug_generate_report">Generate a report</string>
    <string name="item_title_debug_show_view">Show debug view</string>
    <string name="item_title_intent">Intent</string>
    <string name="item_title_permission_accessibility">Accessibility service</string>
    <string name="item_title_permission_notification">Notification</string>
    <string name="item_title_permission_overlay">Overlay</string>
    <string name="item_title_pause">Wait</string>
    <string name="item_title_report_total_duration">Total duration</string>
    <string name="item_title_report_image_processed">Images processed</string>
    <string name="item_title_report_avg_image_processing_duration">Average processing duration</string>
    <string name="item_title_report_total_event_trigger_count">Events triggered</string>
    <string name="item_title_report_detection_count">Conditions detected</string>
    <string name="item_title_swipe">Swipe</string>
    <string name="item_title_toggle_event">Change event state</string>
    <string name="message_empty_actions">No actions !</string>
    <string name="message_empty_conditions">No conditions !</string>
    <string name="message_empty_copy">Nothing to copy</string>
    <string name="message_empty_end_condition_config_event_none_in_scenario">No Event created in the scenario</string>
    <string name="message_empty_end_condition_config_event_no_selection">No Event selected</string>
    <string name="message_empty_event_list">No events !</string>
    <string name="message_empty_scenario_list">Create your first scenario and start automatizing tasks on your phone</string>
    <string name="message_empty_secondary_end_condition_no_events">You need at least one event to create an end condition for your scenario</string>
    <string name="message_empty_secondary_event_list">An event contains a set of actions executed when a specific condition is detected on the screen.\nYou need at least one event in your scenario to execute it.</string>
    <string name="message_empty_secondary_condition_list">A condition is a part of a screenshot that will be searched on each frames displayed by your phone screen.\nYou need at least one condition in your event.</string>
    <string name="message_empty_secondary_action_list">An action is an interaction (click, swipe…) with your phone triggered when the created conditions are fulfilled.\nYou need at least one action in your event.</string>
    <string name="message_backup_create_progress">Creating backup: %1$d/%2$d</string>
    <string name="message_backup_create_completed">Backup completed</string>
    <string name="message_backup_create_error">An error has occurred and the backup export has been cancelled</string>
    <string name="message_backup_import_progress">Importing backup: %1$d</string>
    <string name="message_backup_import_verification">Data verification</string>
    <string name="message_backup_import_completed">Import completed\n%1$d scenario imported</string>
    <string name="message_backup_import_completed_with_error">Import completed\n%1$d scenarios imported\n%2$d errors</string>
    <string name="message_backup_import_error">An error has occurred and the backup import has been cancelled</string>
    <string name="message_backup_import_compatibility">Some of the imported scenarios have been generated from a device with a different screen and this might cause issues with the detection and action coordinates.\n\nTo fix it, you need to take new screenshots for your conditions and update your click/swipe positions.</string>
    <string name="message_condition_threshold">%1$d%%</string>
    <string name="message_event_copy_with_toggle_action_from_another_scenario">This event have one or more toggle event actions referencing an event from another scenario.\nYou will have to update their target events before saving your scenario.</string>
    <string name="message_delete_scenario">This will delete %1$s. Are you sure ?</string>
    <string name="message_event_delete_associated_end_condition">This event have one or more end conditions referencing it. Deleting this event will delete the associated end conditions as well.\nAre you sure ?</string>
    <string name="message_event_delete_associated_action">This event have one or more actions referencing it. Deleting this event will delete the associated actions as well.\nAre you sure ?</string>
    <string name="toast_configure_single_click">Touch the position to click on.</string>
    <string name="toast_configure_swipe_from">Touch the position to start the swipe from.</string>
    <string name="toast_configure_swipe_to">Touch the position to end the swipe to.</string>
    <string name="toast_denied_screen_sharing_permission">User denied screen sharing permission</string>
    <string name="section_title_condition_detection_details">Detection details</string>
    <string name="section_title_condition_threshold">Tolerated difference</string>
    <string name="section_title_detection_quality_title">Detection quality</string>
    <string name="section_title_end_condition">End conditions</string>
    <string name="section_title_intent_extras_value">Value</string>
    <string name="section_title_report_timing_min">Min</string>
    <string name="section_title_report_timing_max">Max</string>
    <string name="section_title_report_timing_avg">Avg</string>
    <string name="section_title_report_event_trigger_count">Triggered</string>
    <string name="section_title_report_event_processing_count">Processed</string>
    <string name="section_title_report_condition_detected_count">Detected</string>
    <string name="section_title_report_condition_processing_count">Processed</string>
    <string name="section_title_report_timing_title">Processing timing</string>
    <string name="section_title_report_confidence_title">Detection confidence rate</string>
    <string name="section_title_start_application">Start application</string>
    <string name="list_header_copy_event_this">Events from this scenario</string>
    <string name="list_header_copy_event_all">Events from all scenarios</string>
    <string name="list_header_copy_conditions_this">Conditions from this event</string>
    <string name="list_header_copy_conditions_all">Conditions from all events</string>
    <string name="list_header_copy_action_this">Actions from this event</string>
    <string name="list_header_copy_action_all">Actions from all events</string>
    <string name="search_view_hint_event_copy">Search by event name</string>
    <string name="search_view_hint_action_copy">Search by action name</string>
    <string name="search_view_hint_condition_copy">Search by condition name</string>
    <string name="button_text_click_position_select">Select the position</string>
    <string name="content_desc_move_menu">Move the floating menu</string>
    <string name="content_desc_confirm">Confirm</string>
    <string name="content_desc_go_back">Back to dialog</string>
</resources>