<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_item_title_cancel"
        android:visible="false"/>

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_item_title_select_all"
        android:visible="false"/>

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_menu_save"
        app:showAsAction="always"
        android:title="@string/menu_item_title_export"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_load"
        app:showAsAction="always"
        android:title="@string/menu_item_title_import"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_material"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/menu_item_title_search" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_filled"
        app:showAsAction="always"
        android:title="@string/menu_item_title_settings"
        tools:ignore="AlwaysShowAction" />

</menu>